[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes&Scripts/3.gd" type="Script" id=1]

[node name="DataManagerGameJolt" type="Node2D"]
script = ExtResource( 1 )

[node name="delete" type="Button" parent="."]
margin_left = 192.0
margin_top = 280.0
margin_right = 432.0
margin_bottom = 344.0
text = "delete"

[node name="add" type="Button" parent="."]
margin_left = 528.0
margin_top = 280.0
margin_right = 768.0
margin_bottom = 344.0
text = "add"

[node name="fetch" type="Button" parent="."]
margin_left = 192.0
margin_top = 368.0
margin_right = 432.0
margin_bottom = 432.0
text = "fetch"

[node name="auth" type="Button" parent="."]
margin_left = 336.0
margin_top = 64.0
margin_right = 468.0
margin_bottom = 112.0
text = "auth"

[node name="input" type="LineEdit" parent="."]
margin_left = 192.0
margin_top = 152.0
margin_right = 768.0
margin_bottom = 192.0
align = 1
max_length = 30

[node name="name" type="LineEdit" parent="."]
margin_left = 488.0
margin_top = 40.0
margin_right = 728.0
margin_bottom = 80.0
text = "thisaccounthas30lettersyousuck"
align = 1
max_length = 30

[node name="input2" type="LineEdit" parent="."]
margin_left = 192.0
margin_top = 208.0
margin_right = 768.0
margin_bottom = 248.0
align = 1
max_length = 30

[node name="token" type="LineEdit" parent="."]
margin_left = 488.0
margin_top = 96.0
margin_right = 728.0
margin_bottom = 136.0
align = 1
max_length = 30
secret = true

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 440.0
margin_top = 336.0
margin_right = 516.0
margin_bottom = 376.0

[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="fetch" to="." method="_on_fetch_pressed"]
[connection signal="pressed" from="auth" to="." method="_on_auth_pressed"]
